# Aerial_Manipulator_Simulation

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
analysis/: __init__.py  data_logger.py  result_analyzer.py
config/: controller_params.yaml  default_params.yaml  nmpc_params.yaml  sdre_params.yaml  simulation_params.yaml
control/: __init__.py  attitude_controller.py  base_controller.py  casadi_dynamics.py  control_allocator.py  gain_optimizer.py  manipulator_controller.py  nmpc_controller.py  position_controller.py  sdre_controller.py
core/: CMakeLists.txt
core/bindings/: CMakeLists.txt  py_aerial_manipulator.cpp
core/include/aerial_manipulator/: aerial_manipulator_system.hpp  integrator.hpp  manipulator.hpp  quadrotor.hpp  rigid_body.hpp  rk4_integrator.hpp  rkf45_integrator.hpp  types.hpp
core/src/: aerial_manipulator_system.cpp  manipulator.cpp  quadrotor.cpp  rigid_body.cpp  rk4_integrator.cpp  rkf45_integrator.cpp
docs/: THEORY.md
examples/: 01_hover.py  02_position_tracking.py  03_arm_motion.py
models/: __init__.py  output_manager.py  parameter_manager.py  state.py  system_wrapper.py
scripts/: build.sh  generate_block_diagram.py  optimize_gains.py  profile_simulation.py
simulation/: __init__.py  simulation_config.py  simulation_runner.py  time_manager.py
tests/: conftest.py
tests/integration/: test_coupled_dynamics.py  test_hover_stability.py  test_nmpc_robustness.py  test_step_size_sensitivity.py  (+1 more)
visualization/: __init__.py  animator.py  plot_manager.py  plot_styles.py
(+14 files in other folders)
