[build-system]
requires = ["setuptools>=68.0", "wheel", "cmake>=3.16", "pybind11>=2.11"]
build-backend = "setuptools.build_meta"

[project]
name = "aerial-manipulator"
version = "0.1.0"
description = "Quadrotor + 2-DOF 3D manipulator coupled dynamics simulation"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "matplotlib>=3.7",
    "pyyaml>=6.0",
    "pandas>=2.0",
    "h5py>=3.9",
    "casadi>=3.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-html>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
